# crew-traveling

./: README.md  pyproject.toml  report.md  travel_plan_ly son.txt
src/travelings/: app.py  crew.py  main.py
src/travelings/config/: agents.yaml  tasks.yaml
src/travelings/utils/: heplers.py
